# sidekick

./: .env.example  .gitignore  README.md  package.json  pnpm-lock.yaml  pyproject.toml
.github/workflows/: eval.yml
apps/api/: pyproject.toml
apps/api/app/: agent_bridge.py  api_models.py  cache_metrics.py  cli.py  config.py  conversations.py  db.py  embeddings.py  hil.py  main.py  observability.py  semantic_cache.py  tenants.py
apps/web/: package.json
apps/web/app/: layout.tsx  page.tsx
apps/web/components/: ChatPanel.tsx  ConfirmCard.tsx  ConversationSidebar.tsx  MessageBubble.tsx  TenantSwitcher.tsx  ToolCallCard.tsx
apps/web/lib/: api.ts  tenant-store.ts
apps/worker/: pyproject.toml
apps/worker/worker/: celery_app.py  tasks.py
config/: llm_router.multi.yaml.example  llm_router.yaml  tenants.yaml
docs/: architecture.md  m1_final_report.md  m3_final_report.md  电商智能助手技术选型方案_v4.md
infra/: docker-compose.yml  init-postgres.sh
openspec/changes/add-sidekick-poc/: design.md  proposal.md  tasks.md
reports/m1_20260418_233749/: report.md  summary.json
reports/m1_20260418_233749/raw/: inv-001__dashscope_qwen-max.json  sales-001__dashscope_qwen-max.json
reports/m1_20260418_235233/raw/: sales-001__dashscope_qwen-max.json  sales-002__dashscope_qwen-max.json
reports/m1_20260418_235352/: report.md  summary.json
reports/m1_20260418_235352/raw/: sales-001__dashscope_qwen-plus.json  sales-002__dashscope_qwen-plus.json  sales-003__dashscope_qwen-plus.json  sales-004__dashscope_qwen-plus.json  sales-005__dashscope_qwen-plus.json
reports/m1_20260419_000530/: report.md  summary.json
reports/m1_20260419_000530/raw/: sales-004__dashscope_qwen-plus.json
reports/m1_20260419_000905/: report.md  summary.json
reports/m1_20260419_001202/: report.md  summary.json
reports/m1_20260419_092529/: report.md  summary.json
reports/m1_20260419_093626/: report.md  summary.json
reports/m1_20260419_093907/: report.md  summary.json
reports/m1_20260419_095505/: report.md  summary.json
reports/m1_20260419_100314/: report.md  summary.json
reports/m1_20260419_102558/: report.md  summary.json
reports/sim_20260419_154248/: adversarial_0.json  newbie_0.json  report.md  summary.json
reports/sim_20260419_204125/: adversarial_0.json  report.md  summary.json
scripts/: llm_ping.py  seed_orders.py  shopify_ping.py  smoke_test.py
tests/: conftest.py
tests/cases/: content_generation.yaml  inventory_ops.yaml  mixed_intent.yaml  sales_analytics.yaml
tests/integration/: test_evaluation_thresholds.py
tests/unit/: test_agent_runner.py  test_jit_instructions.py  test_query_store_data.py  test_rate_limit.py  test_schema_loader.py  test_tool_dispatcher.py  test_write_tools.py
(+94 files in other folders)
